--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,8 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
->
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,7 +15,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         app:civ_border_width="1dp"
-        app:civ_border_color="#94969A"
+        app:civ_border_color="?colorPrimary"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
 
