--- a/app/src/main/res/layout/housingrowlayout.xml
+++ b/app/src/main/res/layout/housingrowlayout.xml
@@ -1,79 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="95dp"
-    android:padding="6dip"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Card"
+    android:layout_marginTop="8dp"
+    android:background="#fff"
+    app:cardBackgroundColor="#fff"
     android:fontFamily="sans-serif">
 
-    <TextView
-        android:id="@+id/firstLine"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:gravity="center_vertical"
-        android:text="Apt Name"
-        android:textSize="18sp"
-        android:textColor="#3b3b45"
-        android:fontFamily="sans-serif-medium"/>
+        android:layout_height="95dp"
+        android:padding="6dip"
+        android:fontFamily="sans-serif">
 
-    <TextView
-        android:id="@+id/secondLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="2dp"
-        android:singleLine="true"
-        android:text="Address"
-        android:textSize="13sp"
-        android:textColor="#94969a"
-        android:layout_below="@+id/firstLine"
-        android:fontFamily="sans-serif-condensed"/>
+        <TextView
+            android:id="@+id/firstLine"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignWithParentIfMissing="true"
+            android:gravity="center_vertical"
+            android:text="Apt Name"
+            android:textSize="18sp"
+            android:textColor="#3b3b45"
+            android:fontFamily="sans-serif-medium"/>
 
-    <TextView
-        android:id="@+id/thirdLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="2dp"
-        android:text="City, ST"
-        android:textSize="13sp"
-        android:textColor="#94969a"
-        android:layout_alignTop="@+id/secondLine"
-        android:layout_toEndOf="@+id/secondLine"
-        android:fontFamily="sans-serif-condensed"/>
+        <TextView
+            android:id="@+id/secondLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:singleLine="true"
+            android:text="Address"
+            android:textSize="13sp"
+            android:textColor="#94969a"
+            android:layout_below="@+id/firstLine"
+            android:fontFamily="sans-serif-condensed"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="2dp"
-        android:text="Distance"
-        android:textSize="13sp"
-        android:textColor="#3b3b45"
-        android:id="@+id/distance"
-        android:gravity="right"
-        android:layout_below="@+id/secondLine"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/thirdLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:text="City, ST"
+            android:textSize="13sp"
+            android:textColor="#94969a"
+            android:layout_alignTop="@+id/secondLine"
+            android:layout_toEndOf="@+id/secondLine"
+            android:fontFamily="sans-serif-condensed"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="$1000+"
-        android:textSize="12sp"
-        android:textColor="#3B3C43"
-        android:id="@+id/cost"
-        android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/firstLine" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:text="Distance"
+            android:textSize="13sp"
+            android:textColor="#3b3b45"
+            android:id="@+id/distance"
+            android:gravity="right"
+            android:layout_below="@+id/secondLine"
+            android:layout_alignParentStart="true" />
 
-    <RatingBar style="?android:attr/ratingBarStyleSmall"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:id="@+id/ratingBar"
-               android:numStars="5"
-               android:stepSize="0.1"
-               android:rating="4.2"
-               android:layout_alignBottom="@+id/firstLine"
-               android:layout_alignEnd="@+id/firstLine" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$1000+"
+            android:textSize="12sp"
+            android:textColor="#3B3C43"
+            android:id="@+id/cost"
+            android:layout_centerVertical="true"
+            android:layout_alignEnd="@+id/firstLine" />
+
+        <RatingBar style="?android:attr/ratingBarStyleSmall"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/ratingBar"
+                   android:numStars="5"
+                   android:stepSize="0.1"
+                   android:rating="4.2"
+                   android:layout_alignBottom="@+id/firstLine"
+                   android:layout_alignEnd="@+id/firstLine" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
