--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:fontFamily="sans-serif">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -28,7 +29,8 @@
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:editable="false"
-        android:textSize="@dimen/abc_text_size_headline_material" />
+        android:textSize="@dimen/abc_text_size_headline_material"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,7 +39,8 @@
         android:text="@string/FunctionLocation"
         android:id="@+id/txtFunctionLocation"
         android:layout_below="@+id/txtFirstLastName"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +50,9 @@
         android:id="@+id/txtRoleLbl"
         android:layout_below="@+id/txtFunctionLocation"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="40dp"
+        android:textSize="17sp"
+        android:fontFamily="sans-serif-medium"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,7 +61,9 @@
         android:text="@string/role"
         android:id="@+id/txtRole"
         android:layout_below="@+id/txtRoleLbl"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -66,7 +73,9 @@
         android:id="@+id/txtALLbl"
         android:layout_below="@+id/txtRole"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="43dp" />
+        android:layout_marginTop="25dp"
+        android:textSize="17sp"
+        android:fontFamily="sans-serif-medium"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -76,17 +85,21 @@
         android:id="@+id/txtAL"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/txtALLbl"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="University"
+        android:text="University:"
         android:id="@+id/txtUnivLbl"
         android:layout_below="@+id/txtAL"
-        android:layout_marginTop="43dp"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="25dp"
+        android:layout_alignParentStart="true"
+        android:textSize="17sp"
+        android:fontFamily="sans-serif-medium"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -95,7 +108,21 @@
         android:text="BLP's University"
         android:id="@+id/txtUniv"
         android:layout_below="@+id/txtUnivLbl"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Contact Info:"
+        android:id="@+id/Contact"
+        android:layout_below="@id/txtUniv"
+        android:layout_marginTop="25dp"
+        android:layout_alignParentStart="true"
+        android:textSize="17sp"
+        android:fontFamily="sans-serif-medium"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,9 +130,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/email"
         android:id="@+id/txtEmail"
-        android:layout_below="@+id/txtUniv"
-        android:layout_marginTop="43dp"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/Contact"
+        android:layout_marginTop="0dp"
+        android:layout_alignParentStart="true"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -114,7 +143,9 @@
         android:text="@string/phone"
         android:id="@+id/txtPhone"
         android:layout_below="@+id/txtEmail"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif"/>
 
 
     <android.support.design.widget.FloatingActionButton
