--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,9 +9,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Check Out What&apos;s New with Synchrony Financial"
+        android:text="Check Out What&apos;s New with Synchrony Financial:"
         android:id="@+id/textView2"
-        android:fontFamily="sans-serif"/>
+        android:fontFamily="sans-serif-medium"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
