--- a/app/src/main/res/layout/housingrowlayout.xml
+++ b/app/src/main/res/layout/housingrowlayout.xml
@@ -77,14 +77,14 @@
             android:fontFamily="sans-serif"/>
 
         <RatingBar style="?android:attr/ratingBarStyleSmall"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:id="@+id/ratingBar"
-                   android:numStars="5"
-                   android:stepSize="0.1"
-                   android:rating="4.2"
-                   android:layout_alignBottom="@+id/firstLine"
-                   android:layout_alignEnd="@+id/firstLine" />
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/ratingBar"
+           android:numStars="5"
+           android:stepSize="0.1"
+           android:rating="4.2"
+           android:layout_alignBottom="@+id/firstLine"
+           android:layout_alignParentEnd="true" />
 
 
     </RelativeLayout>
