made Submit text button larger updated format on directory profile to bold and change sizes and added contact info title

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,8 @@
             android:background="?colorAccent"
             android:layout_gravity="center"
             android:layout_margin="32dp"
-            android:fontFamily="sans-serif"/>
+            android:fontFamily="sans-serif"
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
