--- a/app/src/main/res/layout/activity_splash_page.xml
+++ b/app/src/main/res/layout/activity_splash_page.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_material_dark">
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/splash_image" />
+        android:src="@drawable/splash_image"
+        android:background="@color/background_material_dark"/>
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:textSize="12dp"
-        android:textColor="#454545"
+        android:textColor="#ffffff"
         android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
         android:text="SYF Business Leadership Program"
-        android:fontFamily="sans-serif"/>
+        android:fontFamily="sans-serif-medium"/>
 
 </RelativeLayout>
