Link on newsfeed page

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Check Out What&apos;s New with Synchrony Financial:"
+        android:text="@string/NewsfeedHeading"
         android:id="@+id/textView2"
         android:fontFamily="sans-serif-medium"/>
 
