--- a/app/src/main/res/layout/home_rowlayout.xml
+++ b/app/src/main/res/layout/home_rowlayout.xml
@@ -49,6 +49,24 @@
             android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif"/>
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="Visit Page"
+            android:id="@+id/btnURL"
+            android:visibility="visible"
+            android:textSize="12sp"
+            android:textColor="#fff"
+            android:background="@color/colorAccent"
+            android:layout_toRightOf="@+id/icon"
+            android:layout_centerVertical="true"
+            android:clickable="true"
+            android:padding="6dp"
+            android:fontFamily="sans-serif"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentBottom="true"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
