--- a/app/src/main/res/layout/content_person.xml
+++ b/app/src/main/res/layout/content_person.xml
@@ -12,7 +12,8 @@
         android:id="@+id/blpName"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:textColor="#3B3C43"/>
+        android:textColor="#3B3C43"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,5 +24,6 @@
         android:layout_toRightOf="@+id/blpName"
         android:layout_alignBottom="@+id/blpName"
         android:paddingLeft="15dp"
-        android:textColor="#94969a"/>
+        android:textColor="#94969a"
+        android:fontFamily="sans-serif"/>
 </RelativeLayout>
