--- a/app/src/main/res/layout/home_rowlayout.xml
+++ b/app/src/main/res/layout/home_rowlayout.xml
@@ -63,7 +63,7 @@
             android:layout_centerVertical="true"
             android:clickable="true"
             android:padding="6dp"
-            android:fontFamily="sans-serif"
+            android:fontFamily="sans-serif-medium"
             android:layout_marginTop="5dp"
             android:layout_alignParentBottom="true"/>
 
