--- a/app/src/main/res/layout/location_layout.xml
+++ b/app/src/main/res/layout/location_layout.xml
@@ -13,5 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView2"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="sans-serif"/>
 </LinearLayout>
